# openaq-dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: callbacks.py  config.py  data.py  layout.py  main.py
